--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -5,18 +5,24 @@
 <p>Title</p>
 <span><%= book.title %></span>
 
+<p>Body</p>
+<span><%= book.body %></span>
+
+<%= link_to "show" , book_path(book.id) %>
+<%= link_to "edit" , edit_book_path(book.id) %>
 <% end %>
 
 
 
-<h4>New book</h4>
+
+<h1>New book</h1>
 
 <%= form_with model: @book do |f| %>
   <h5>Title</h5>
   <%= f.text_field :title %>
 
   <h5>Body</h5>
-  <%= f.text_area :body　%>
+  <%= f.text_field :body %>
 
-  <%= f.submit '投稿' %>
+  <%= f.submit 'Create Book' %>
 <% end %>
