--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -10,4 +10,9 @@
 
 <%= f.submit 'Update Book' %>
 
+<%= link_to "show" , book_path(@book.id) %>
+<%= link_to "back" , books_path %>
+
 <% end %>
+
+
