--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,5 +1,6 @@
 <h1>books</h1>
 
+
 <% @books.each do |book| %>
 
 <p>Title</p>
@@ -8,8 +9,9 @@
 <p>Body</p>
 <span><%= book.body %></span>
 
-<%= link_to "show" , book_path(book.id) %>
-<%= link_to "edit" , edit_book_path(book.id) %>
+<%= link_to "Show" , book_path(book.id) %>
+<%= link_to "Edit" , edit_book_path(book.id) %>
+<%= link_to "Distroy", book_path(book.id) , method: :delete %>
 <% end %>
 
 
