--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,30 +1,42 @@
 <h1>books</h1>
 
-
+<table>
+  <thead>
+    <tr>
+      <th>Title</th>
+      <th>Body</th>
+      <th>  </th>
+    </tr>
+  </thead>
 <% @books.each do |book| %>
-
-<p>Title</p>
-<span><%= book.title %></span>
-
-<p>Body</p>
-<span><%= book.body %></span>
-
-<%= link_to "Show" , book_path(book.id) %>
-<%= link_to "Edit" , edit_book_path(book.id) %>
-<%= link_to "Distroy", book_path(book.id) , method: :delete %>
-<% end %>
-
+  <tbody>
+    <td><%= book.title %></td>
+    <td><%= book.body %></td>
+    <td><%= link_to "Show" , book_path(book.id) %></td>
+    <td><%= link_to "Edit" , edit_book_path(book.id) %></td>
+    <td><%= link_to "Distroy", book_path(book.id) , method: :delete, "date-confirm" => "are you sure?" %></td>
+  </tbody>
+    <% end %>
+  </table>
 
 
 
 <h1>New book</h1>
 
+<% if @book.errors.any? %>
+  <%= @book.errors.count %>errors prohibited this book from being saved:
+  <ul>
+    <% @book.errors.full_messages.each do |message| %>
+    <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
 <%= form_with model: @book do |f| %>
   <h5>Title</h5>
   <%= f.text_field :title %>
 
   <h5>Body</h5>
-  <%= f.text_field :body %>
+  <%= f.text_area :body %>
 
   <%= f.submit 'Create Book' %>
 <% end %>
