--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -1,3 +1,18 @@
 // Place all the styles related to the homes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border;
+}
+
+h1 {
+  width: 100%;
+  margin-top : 50px;
+  text-align: left;
+}
+
+p {
+  margin: 30px;
+}
