--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,12 +1,11 @@
-<div class="box1">
+
 <h1>ようこそ　Bookersへ！</h1>
-</div>
 
 
-<div class="box2">
-<p>Bookersでは、様々な書籍に関するあなたの意見や<br>
-  印象を共有し交換することができます</p>
-</div>
+<p>Bookersでは、様々な書籍に関するあなたの意見や</p>
+<p>印象を共有し交換することができます</p>
 
 
-  <%= link_to"start",'/books' %>
+  <p>
+    <%= link_to"start",'/books' %>
+  </p>
